...

      if (resultado.user != null) {
        return await buscarDadosUsuario(resultado.user!.uid);
      }
      return null;
    } catch (e) {
      throw Exception('Erro no login: ${e.toString()}');
    }
  }

  Future<Usuario?> buscarDadosUsuario(String uid) async {
    try {
      DocumentSnapshot doc =
...
