...
class DashboardProfessor extends StatelessWidget {
  const DashboardProfessor({super.key});

  @override
  Widget build(BuildContext context) {
    return LayoutBase(
      titulo: 'Área do Professor',
      corPrincipal: MenuConfig.corProfessor,
      itensMenu: MenuConfig.menuProfessor,
      itemSelecionadoId: 'home',
      breadcrumbs: const [
        Breadcrumb(texto: 'Início', isAtivo: true),
      ],
...
