...
class DashboardDiretor extends StatelessWidget {
  const DashboardDiretor({super.key});

  @override
  Widget build(BuildContext context) {
    return LayoutBase(
      titulo: 'Área do Diretor',
      corPrincipal: MenuConfig.corDiretor,
      itensMenu: MenuConfig.menuDiretor,
      itemSelecionadoId: 'home',
      breadcrumbs: const [
        Breadcrumb(texto: 'Início', isAtivo: true),
      ],
...
